# ffilesystem-concepts

./: CMakeLists.txt  README.md  cppcheck.supp  memcheck.cmake  options.cmake
.github/workflows/: ci.yml  ci_msvc.yml
.github/workflows/composite-action/: action.yml
cmake/: compilers.cmake
src/: CMakeLists.txt  ffilesystem.cpp  ffilesystem.h  locale.cpp
src/canonical/: CMakeLists.txt  canonical.c  canonical.cpp  canonical.h  case_sense.cmake  main.f90  windows_read_symlink.c  windows_read_symlink.cpp
src/chdir/: CMakeLists.txt  chdir.cpp  fs_chdir.h
src/copytree/: CMakeLists.txt  copytree.cpp  copytree.h
src/file_parts/: CMakeLists.txt  file_parts.cpp
src/file_types/: CMakeLists.txt  file_status.cpp
src/filesystem_type/: filesystem_type.cpp  filesystem_type.h
src/find/: get_filename.f90
src/iterdir/: CMakeLists.txt
src/lib_dir/: CMakeLists.txt  lib.c
src/mkdtemp/: CMakeLists.txt  README.md  mkdtemp.c  mkdtemp.cpp  mkdtemp.h  mkdtemp_f.cpp  mt19937-64.c  mt19937-64.h
src/short_path/: short_path.cpp  short_path.h
src/space/: CMakeLists.txt
src/symlink/: CMakeLists.txt  symlink.cpp  symlink.h
src/syscall/: CMakeLists.txt  CreateProcess.c  CreateProcess.cpp  exec.c  exec.cpp  execute_process.h
test/: GetFileInformationByName.cpp
test/canonical/: CMakeLists.txt  case_sense.cmake  test_canonical.c  test_canonical.cpp  test_canonical.f90
test/case_sensitive/: CMakeLists.txt  case_sensitive.cpp
test/chdir/: CMakeLists.txt  chdir.c  chdir.cpp  chdir.f90
test/copytree/: CMakeLists.txt  test_copytree.cpp
test/cygpath/: CMakeLists.txt  cygpath.cpp
test/file_parts/: CMakeLists.txt  file_parts.f90
test/file_types/: CMakeLists.txt  test_file_types.cpp
test/filesystem_type/: CMakeLists.txt  test_filesystem_type.cpp
test/find_file/: CMakeLists.txt  test_find_file.cpp
test/getenv_s/: getenv_s.cpp
test/home_dir/: CMakeLists.txt  test_home_dir.cpp
test/is_dir/: CMakeLists.txt  bench_is_dir.cpp
test/is_exe/: CMakeLists.txt  test_is_exe.cpp
test/iterdir/: CMakeLists.txt  iterdir.cpp
test/lib_dir/: CMakeLists.txt  main.f90
test/long_path/: WindowsLongPath.cpp  long_path_enabled.cpp  long_path_enabled.py  test_long_path.cpp
test/maximums/: CMakeLists.txt  max_path_components.cpp
test/memory/: CMakeLists.txt  test_memory.c
test/mkdtemp/: CMakeLists.txt  test_mkdtemp.cpp  test_mkdtemp.f90
test/partition/: CMakeLists.txt  test_partition.cpp
test/path_type/: CMakeLists.txt  main.f90
test/short_path/: CMakeLists.txt  short_path_windows.cpp
test/space_avail/: CMakeLists.txt  demo_space.cpp  space_avail.cpp
test/strcpy_s/: CMakeLists.txt  test_strcpy_s.c
test/symlink/: CMakeLists.txt  test_symlink.cpp
test/syscall/: CMakeLists.txt  test_create_process.c  test_create_process.cpp  test_exec.c  test_exec.cpp
test/unc/: CMakeLists.txt  test_unc.cpp
test/user_config/: user_config.cpp
test/wide/: CMakeLists.txt  print_wide.cpp  test_wide.cpp
